# MultiLanguage

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  MultiLanguage.pro  README.md
MultiLanguage/: Makefile  MultiLanguage.cpp  MultiLanguage.h
MultiLanguage/Imp/: MultiLanguageImp.cpp  MultiLanguageImp.h
MultiLanguage/Imp/Loader/: Loader.cpp  Loader.h
MultiLanguage/Imp/Loader/Concrete/: TXTLoader.cpp  TXTLoader.h  Util.cpp  Util.h  XMLLoader.cpp  XMLLoader.h
MultiLanguage/Imp/Translator/: IImport.h  IImportAndExport.h  ITranslate.h  Translator.cpp  Translator.h
MultiLanguage/Imp/Translator/Concrete/: TranslatorTrace.cpp  TranslatorTrace.h  TwoLevelMapTranslator.cpp  TwoLevelMapTranslator.h
test/: Makefile  test_MultiLanguageImp.cpp  test_TXTLoader.cpp  test_TwoLevelMapTranslator.cpp  test_XMLLoader.cpp
